<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="8dp"
        android:background="#BBADA0"
        android:padding="5dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="0"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="1"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="2"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_column="2"
            app:layout_row="0"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="3"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="4"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="5"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="6"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="7"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="8"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="9"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="10"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="11"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView12"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="12"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView13"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="13"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView14"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="14"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/textView15"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:tag="15"
            android:textSize="50sp"
            android:textStyle="bold"
            autofit:minTextSize="16sp" />
    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="UpClicked"
        android:text="UP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="DownClicked"
        android:text="DOWN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:onClick="RightClicked"
        android:text="RIGHT"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="LeftClicked"
        android:text="LEFT"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gameTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textSize="20sp"
            android:maxLines="1"
            android:singleLine="true"
            autofit:minTextSize="16sp"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/highScore"
            android:textSize="20sp"
            android:maxLines="1"
            android:singleLine="true"
            autofit:minTextSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="LogoutClick"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="PlayAgainBtnClicked"
        android:text="@string/playAgain"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>